feat(ROI Tool): Add additional dymamic insights to clarify the user selections

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -126,6 +126,7 @@ is on production impact, adapotion rate, etc. -->
 Choose your model parameters for the analysis.
 
 ```{ojs}
+//TODO: Move this to the appendix soe nb code is cleaner.
 viewof options_econPerfWalkthrough = {
   const terms = {
     none: _lang(nbText.projectSetup.blocks.impacts.terms.none, {
@@ -226,11 +227,48 @@ viewof options_econPerfWalkthrough = {
     }
   );
 }
+
+options_econPerfWalkthrough;
 ```
 
 `{ojs} dropdown_section("Advanced Controls", false, "Stuff for experts")`
 
 # `{ojs} heading2` {#investment-returns}
+
+`{ojs} renderReview1()`
+
+`{ojs} renderReview2()`
+
+```{ojs}
+indicatorSelector = {
+  // bind input so tooltip can be dynamic
+  return Inputs.bind(
+    Inputs.select(dataPickMetric, {
+    label: makeTooltipLabel({
+      labelText: _lang(nbText.indicators.general.terms.indicator),
+      tooltipText: pickMetricWalkthrough.tooltip,
+    }),
+    format: (x) => x.labelFull,
+  }), viewof pickMetricWalkthrough
+  )
+}
+```
+
+```{ojs}
+{
+  const listWhat = _lang(nbText.investmentReturns.blocks.infoListHeaders.what)
+  const listInterpret = _lang(nbText.investmentReturns.blocks.infoListHeaders.interpret)
+  const listTell = _lang(nbText.investmentReturns.blocks.infoListHeaders.tell)
+
+  // indicator info
+  return md`### ${pickMetricWalkthrough.labelFull}
+
+- **${listWhat}**: ${pickMetricWalkthrough.info.what}
+- **${listInterpret}**: ${pickMetricWalkthrough.info.interpret}
+- **${listTell}**: ${pickMetricWalkthrough.info.tell}
+`
+}
+```
 
 # `{ojs} nbSummary` {#summary}
 
@@ -416,8 +454,6 @@ viewof select_country = {
     selected: ["KEN", "TZA"],
   });
 }
-
-select_country
 ```
 
 ```{ojs}
@@ -518,6 +554,20 @@ recipe_paymentSchedule = Array.from({ length: projectYears }).map((_, i) => {
     cost_cum: ((i + 1) / projectYears) * rangeProjectCost,
   };
 });
+```
+
+### Other Selections
+
+```{ojs}
+// Plot Variable
+// base selector for metric type
+viewof pickMetricWalkthrough = {
+  return Inputs.select(dataPickMetric, {
+    label: _lang(nbText.indicators.general.terms.indicator),
+    format: (x) => x.labelFull,
+    value: dataPickMetric.find((d) => d.key == "irr")
+  });
+}
 ```
 
 ## Elements
@@ -691,6 +741,8 @@ prettyLanguageView = {
 }
 ```
 
+### Markdown notebook text
+
 ```{ojs}
 dataPickMetric = {
   return [
@@ -754,6 +806,118 @@ dataPickMetric = {
 }
 ```
 
+```{ojs}
+renderReview1 = () => {
+  const langBasePath = nbText.investmentReturns.blocks.insightReview.setupBlock;
+  const langMissingTemplate = _lang(langBasePath.missingMessage, {
+    key: language.key,
+  });
+
+  const isoSet = new Set(select_country);
+
+  const admin0List = countries
+    .filter((d) => isoSet.has(d.iso3c))
+    .map((d) => d.admin0_name);
+
+  const cropList = select_crop;
+
+  // const cropList = adminCropChoices.crops.sort((a,b) => _lang(a.translation) > _lang(b.translation));
+  const truncateSize = 3;
+  const admin0ListTruncated = admin0List.slice(0, truncateSize);
+  const cropListTruncated = cropList.slice(0, truncateSize); // .map((d) => _lang(d.translation));
+
+  if (admin0List.length == 0 || cropList.length == 0) {
+    return md`${langMissingTemplate}`;
+  }
+
+  // new code
+  const insertCropCount = cropList.length;
+  const insertCropWord =
+    cropList.length == 1
+      ? _lang(nbText.supportNbText.words.crop.singular, {
+          key: language.key,
+        })
+      : _lang(nbText.supportNbText.words.crop.plural, {
+          key: language.key,
+        });
+  const insertCropList = `(**${cropListTruncated.join(", ")}${
+    cropList.length > truncateSize ? "..." : ""
+  }**)`;
+  const insertCrop = `**${insertCropCount} ${insertCropWord}** ${insertCropList}`;
+
+  const insertRegionCount = select_region.length;
+  const insertRegionWord =
+    insertRegionCount == 1
+      ? _lang(nbText.supportNbText.words.region.singular, {
+          key: language.key,
+        })
+      : _lang(nbText.supportNbText.words.region.plural, {
+          key: language.key,
+        });
+  const insertRegion = `${insertRegionCount} ${insertRegionWord}`;
+
+  const insertCountryCount = admin0List.length;
+  const insertCountryWord =
+    insertCountryCount == 1
+      ? _lang(nbText.supportNbText.words.country.singular, {
+          key: language.key,
+        })
+      : _lang(nbText.supportNbText.words.country.plural, {
+          key: language.key,
+        });
+  const insertCountryList = `(**${admin0ListTruncated.join(", ")}${
+    insertCountryCount > truncateSize ? "..." : ""
+  }**)`;
+  const insertCountry = `**${insertCountryCount} ${insertCountryWord}** ${insertCountryList}`;
+
+  // insert to template
+  const langTemplate = _lang(langBasePath.template, {
+    key: language.key,
+  });
+  const langTemplateItems = [
+    { name: "crop_string", value: insertCrop },
+    { name: "region_string", value: insertRegion },
+    { name: "country_string", value: insertCountry },
+    {
+      name: "cost_string",
+      value: formatUSD({ locale: language.locale })(rangeProjectCost),
+    },
+    { name: "year_string", value: projectYears + " years" }, //TODO: add correct "years" string at end of this
+  ];
+  const selectionFormattedTemplate = Lang.reduceReplaceTemplateItems(
+    langTemplate,
+    langTemplateItems,
+  );
+
+  return md`${selectionFormattedTemplate}`;
+};
+```
+
+```{ojs}
+renderReview2 = () => {
+  const investmentTemplate = _lang(
+    nbText.investmentReturns.blocks.insightReview.indicatorBlock,
+  );
+  const investmentTemplateItems = [
+    {
+      name: "prod_impact_label",
+      value: options_econPerfWalkthrough.inputProdImpact.label,
+    },
+    {
+      name: "adoption_rate_label",
+      value: options_econPerfWalkthrough.inputAdoption.label,
+    },
+    {
+      name: "cis_impact_label",
+      value: options_econPerfWalkthrough.inputCisImpact.label,
+    },
+    { name: "year_string", value: projectYears + " years" },
+  ];
+
+  return md`${Lang.reduceReplaceTemplateItems(investmentTemplate, investmentTemplateItems)}`;
+};
+```
+
 ## Data Filtering and Processing
 
 ```{ojs}
@@ -763,7 +927,6 @@ admin0_names = {
   .filter((d) => isoSet.has(d.iso3c))
   .map((d) => d.admin0_name);
 }
-admin0_names;
 ```
 
 ### CV Data
@@ -773,26 +936,147 @@ import { avlossCalc } from "/notebooks/roi/roi_tools.js";
 ```
 
 ```{ojs}
-mutable cv_results = []; // To allow rest of the cells to render and say, "run code"
+mutable cv_result = []; //TODO: To allow rest of the cells to render and say, "run code"
+mutable cv_admin0_names = [];
+mutable cv_crops = [];
+mutable cv_cis_impact = null;
 
 //TODO: this gets wrapped in a function
-cv_data = db.query(`
-  SELECT * 
-  FROM cv 
-  WHERE crop in ('${select_crop.join("', '")}')
-  AND admin0_name in ('${admin0_names.join("', '")}') -- This needs to find admin0_name from iso3
+calcCV = async () => {
+  const cis_impact = options_econPerfWalkthrough.inputCisImpact.value;
+
+  if ( // Can be computation heavy so if inputs repeat, don't recompute
+      cv_admin0_names === admin0_names
+      && cv_crops === select_crop 
+      && cv_cis_impact === cis_impact
+     ) {
+    return cv_result;
+  }
+
+  const cv_data = await db.query(`
+    SELECT *
+    FROM cv
+    WHERE crop in ('${select_crop.join("', '")}')
+    AND admin0_name in ('${admin0_names.join("', '")}') -- This needs the a0_name rather than iso3
 `);
+  
+  const cv_monteCarlo = await Promise.all(
+    cv_data.map(async ({ crop, admin0_name, cv }) => {
+      const av = await avlossCalc(cv, cis_impact);
+      const avloss = Math.abs(Number(av.toFixed?.(4) ?? av));
+      return { admin0_name, crop, cv, cis_impact, avloss };
+    }),
+  );
 
-cis_impact = options_econPerfWalkthrough.inputCisImpact.value;
+  const cv_index = new Map();
+  for (const { admin0_name, crop, avloss } of cv_monteCarlo) {
+    cv_index.set(`${admin0_name}|${crop}`, avloss);
+  }
 
-results = await Promise.all(
-  // Reduced to only run for each country/crop selection 1. I think it yields same result.
-  cv_data.map(async ({ crop, admin0_name, cv }) => {
-    const av = await avlossCalc(cv, cis_impact);
-    const avloss = Math.abs(Number(av.toFixed?.(4) ?? av));
-    return { admin0_name, crop, cv, cis_impact, avloss };
-  }),
-);
+  mutable cv_result = cv_index
+  mutable cv_admin0_names = admin0_names
+  mutable cv_crops = select_crop
+  mutable cv_cis_impact = cis_impact
+  return cv_index
+}
 
-results;
+cv_index = calcCV();
+```
+
+```{ojs}
+getExposureData = async (crops, countries) => {
+  let data = await db.query(`
+    SELECT *
+    FROM exposure
+    WHERE crop in ('${crops.join("', '")}')
+    AND iso3 in ('${countries.join("', '")}') 
+  `);
+  return data;
+};
+```
+
+```{ojs}
+crop_adoption = async () => {
+  // Globals from the notebook
+  let adoption = options_econPerfWalkthrough.inputAdoption.value;
+  let years = projectYears;
+  let prod_impact = options_econPerfWalkthrough.inputProdImpact.value;
+  let data = await getExposureData(select_crop, select_country);
+  const result = [];
+
+  for (const row of data) {
+    const value = row.value || 0;
+    let xPrev = 0;
+
+    for (let i = 1; i <= years; i++) {
+      // cumulative adoption
+      let x;
+      if (i === 1) {
+        x = Math.round(value * adoption * 10) / 10;
+      } else {
+        x = Math.round((value - xPrev) * adoption * 10) / 10 + xPrev;
+      }
+
+      xPrev = x;
+
+      // push a long-form row
+      result.push({
+        admin0_name: row.admin0_name,
+        admin1_name: row.admin1_name,
+        crop: row.crop,
+        exposure: row.exposure,
+        value: row.value,
+        adoption: adoption,
+        prod_impact: prod_impact,
+        year_char: `y${i}`,
+        year: i,
+        result: x,
+      });
+    }
+  }
+
+  return result.map((row) => {
+    const result_w_impact =
+      Math.round(row.result * (1 + (row.prod_impact ?? 0)) * 10) / 10;
+    const marginal_impact =
+      Math.round((result_w_impact - row.result) * 10) / 10;
+    return { ...row, result_w_impact, marginal_impact };
+  });
+};
+```
+
+```{ojs}
+roiResults = async () => {
+  let index = cv_index;
+  let data = await crop_adoption();
+
+  const withImpact = data.map((row) => {
+    const key = `${row.admin0_name}|${row.crop}`;
+    const avloss = index.get(key) ?? 0; // default to 0 if missing
+
+    const result_w_impact_cis =
+      Math.round(row.result_w_impact * (1 + avloss) * 10) / 10;
+    const marginal_cis =
+      Math.round((result_w_impact_cis - row.result_w_impact) * 10) / 10;
+    const marginal_impact_cis =
+      (marginal_cis || 0) + (row.marginal_impact || 0);
+
+    return {
+      ...row,
+      avloss,
+      result_w_impact_cis,
+      marginal_cis,
+      marginal_impact_cis,
+    };
+  });
+
+  return withImpact.map((d) => {
+    const project_benefit =
+      Math.round((d.marginal_impact_cis - d.marginal_impact_cis / bcr) * 10) /
+      10;
+    return { ...d, bcr, project_benefit };
+  });
+};
+
+roiResults();
 ```
