refactor(ROI Tool): Cleaning up some of the TODOs

--- a/notebooks/roi/economicReturns.qmd
+++ b/notebooks/roi/economicReturns.qmd
@@ -127,109 +127,7 @@ is on production impact, adapotion rate, etc. -->
 Choose your model parameters for the analysis.
 
 ```{ojs}
-//TODO: Move this to the appendix soe nb code is cleaner.
-viewof options_econPerfWalkthrough = {
-  const terms = {
-    none: _lang(nbText.projectSetup.blocks.impacts.terms.none, {
-      key: language.key
-    }),
-    low: _lang(nbText.projectSetup.blocks.impacts.terms.low, {
-      key: language.key
-    }),
-    moderate: _lang(nbText.projectSetup.blocks.impacts.terms.moderate, {
-      key: language.key
-    }),
-    high: _lang(nbText.projectSetup.blocks.impacts.terms.high, {
-      key: language.key
-    }),
-    incremental: _lang(
-      nbText.projectSetup.blocks.impacts.terms.incremental,
-      
-    ),
-    transformative: _lang(
-      nbText.projectSetup.blocks.impacts.terms.transformative,
-      
-    )
-  };
-  const dataProdImpact = [
-    { label: `10% (${terms.incremental})`, value: 0.1 },
-    { label: `20%`, value: 0.2 },
-    { label: `30% (${terms.moderate})`, value: 0.3 },
-    { label: `40%`, value: 0.4 },
-    { label: `50% (${terms.transformative})`, value: 0.5 }
-  ];
-  const inputProdImpact = Inputs.select(dataProdImpact, {
-    label: makeTooltipLabel({
-      labelText: _lang(
-      nbText.projectSetup.blocks.impacts.inputs.prodImpactDropdown.label,
-      
-    ),
-      tooltipText:
-        _lang(
-      nbText.projectSetup.blocks.impacts.inputs.prodImpactDropdown.tooltip,
-      
-    )
-    }),
-    format: (x) => x.label,
-    value: dataProdImpact.find((d) => d.value == 0.3)
-  });
-  const dataAdoption = [
-    { label: `0.5% (${terms.low})`, value: 0.005 },
-    { label: `1% (${terms.moderate})`, value: 0.01 },
-    { label: `2% (${terms.high})`, value: 0.02 }
-  ];
-  const inputAdoption = Inputs.select(dataAdoption, {
-    label: makeTooltipLabel({
-      labelText: _lang(
-      nbText.projectSetup.blocks.impacts.inputs.adoptionRateDropdown.label,
-      
-    ),
-      tooltipText:
-        _lang(
-      nbText.projectSetup.blocks.impacts.inputs.adoptionRateDropdown.tooltip,
-      
-    )
-    }),
-    format: (x) => x.label,
-    value: dataAdoption.find((d) => d.value == 0.01)
-  });
-  const dataCisImpact = [
-    { label: `0% (${terms.none})`, value: 0 },
-    { label: `10% (${terms.low})`, value: 0.1 },
-    { label: `25% (${terms.moderate})`, value: 0.25 },
-    { label: `50% (${terms.high})`, value: 0.5 }
-  ];
-  const inputCisImpact = Inputs.select(dataCisImpact, {
-    label: makeTooltipLabel({
-      labelText: _lang(
-      nbText.projectSetup.blocks.impacts.inputs.cisImpactDropdown.label,
-      
-    ),
-      tooltipText:
-        _lang(
-      nbText.projectSetup.blocks.impacts.inputs.cisImpactDropdown.tooltip,
-      
-    )
-    }),
-    format: (x) => x.label,
-    value: dataCisImpact.find((d) => d.value == 0.25)
-  });
-  return Inputs.form(
-    {
-      inputProdImpact,
-      inputAdoption,
-      inputCisImpact
-    },
-    {
-      template: (inputs) =>
-        htl.html`<div style="display: flex; gap: 3em">${Object.values(
-          inputs
-        )}</div>`
-    }
-  );
-}
-
-options_econPerfWalkthrough;
+viewof options_econPerfWalkthrough = render_econPerfWalkthrough();
 ```
 
 `{ojs} dropdown_section("Advanced Controls", false, "Stuff for experts")`
@@ -565,11 +463,101 @@ rangeProjectCost = {
 projectYears = inputProjectOptions.years.value
 ```
 
+```{ojs}
+render_econPerfWalkthrough = () => {
+  const terms = {
+    none: _lang(nbText.projectSetup.blocks.impacts.terms.none, {
+      key: language.key,
+    }),
+    low: _lang(nbText.projectSetup.blocks.impacts.terms.low, {
+      key: language.key,
+    }),
+    moderate: _lang(nbText.projectSetup.blocks.impacts.terms.moderate, {
+      key: language.key,
+    }),
+    high: _lang(nbText.projectSetup.blocks.impacts.terms.high, {
+      key: language.key,
+    }),
+    incremental: _lang(nbText.projectSetup.blocks.impacts.terms.incremental),
+    transformative: _lang(
+      nbText.projectSetup.blocks.impacts.terms.transformative,
+    ),
+  };
+  const dataProdImpact = [
+    { label: `10% (${terms.incremental})`, value: 0.1 },
+    { label: `20%`, value: 0.2 },
+    { label: `30% (${terms.moderate})`, value: 0.3 },
+    { label: `40%`, value: 0.4 },
+    { label: `50% (${terms.transformative})`, value: 0.5 },
+  ];
+  const inputProdImpact = Inputs.select(dataProdImpact, {
+    label: makeTooltipLabel({
+      labelText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.prodImpactDropdown.label,
+      ),
+      tooltipText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.prodImpactDropdown.tooltip,
+      ),
+    }),
+    format: (x) => x.label,
+    value: dataProdImpact.find((d) => d.value == 0.3),
+  });
+  const dataAdoption = [
+    { label: `0.5% (${terms.low})`, value: 0.005 },
+    { label: `1% (${terms.moderate})`, value: 0.01 },
+    { label: `2% (${terms.high})`, value: 0.02 },
+  ];
+  const inputAdoption = Inputs.select(dataAdoption, {
+    label: makeTooltipLabel({
+      labelText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.adoptionRateDropdown.label,
+      ),
+      tooltipText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.adoptionRateDropdown.tooltip,
+      ),
+    }),
+    format: (x) => x.label,
+    value: dataAdoption.find((d) => d.value == 0.01),
+  });
+  const dataCisImpact = [
+    { label: `0% (${terms.none})`, value: 0 },
+    { label: `10% (${terms.low})`, value: 0.1 },
+    { label: `25% (${terms.moderate})`, value: 0.25 },
+    { label: `50% (${terms.high})`, value: 0.5 },
+  ];
+  const inputCisImpact = Inputs.select(dataCisImpact, {
+    label: makeTooltipLabel({
+      labelText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.cisImpactDropdown.label,
+      ),
+      tooltipText: _lang(
+        nbText.projectSetup.blocks.impacts.inputs.cisImpactDropdown.tooltip,
+      ),
+    }),
+    format: (x) => x.label,
+    value: dataCisImpact.find((d) => d.value == 0.25),
+  });
+  return Inputs.form(
+    {
+      inputProdImpact,
+      inputAdoption,
+      inputCisImpact,
+    },
+    {
+      template: (inputs) =>
+        htl.html`<div style="display: flex; gap: 3em">${Object.values(
+          inputs,
+        )}</div>`,
+    },
+  );
+};
+```
+
 ### Advanced Control Variables
 
 ```{ojs}
 //TODO:
-// -[ ] years, cost, Prod Impact,Adoption, Reduction of impacts, CIS Impact
+// -[x] years, cost, Prod Impact,Adoption, Reduction of impacts, CIS Impact
 // -[ ] BCR
 // -[ ] CIS impact
 
@@ -1251,12 +1239,11 @@ irrnpv = import("https://cdn.skypack.dev/irr-npv@1.0.1?min");
 ```
 
 ```{ojs}
-mutable cv_result = []; //TODO: To allow rest of the cells to render and say, "run code"
+mutable cv_result = [];
 mutable cv_admin0_names = [];
 mutable cv_crops = [];
 mutable cv_cis_impact = null;
 
-//TODO: this gets wrapped in a function
 calcCV = async () => {
   const cis_impact = options_econPerfWalkthrough.inputCisImpact.value;
 
